--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
 
 :root {
   --text-link: #2ca202;
@@ -7,16 +7,16 @@
 
   --border-cell: #ffffff;
   --border-box: #b8b8b8;
-  --border-grid: #D9D9D9;
+  --border-grid: #d9d9d9;
 
-  --background-cell: #D9D9D9;
+  --background-cell: #d9d9d9;
   --shadow: #00000065;
 }
 
 body {
   -webkit-font-smoothing: antialiased;
   width: 100vw;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 main {
@@ -28,15 +28,26 @@ footer {
 }
 
 @media print {
-  ul {
-    display: none;
+  * {
+    box-shadow: none;
   }
 
-  h1 {
-    display: none;
+  body {
+    margin: 0px;
+    padding: 0px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 100%;
+    height: 100%;
   }
 
-  .breaktime span{
+  ul,
+  h1,
+  aside,
+  nav {
     display: none;
   }
 }
