--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -17,6 +17,7 @@ body {
   -webkit-font-smoothing: antialiased;
   width: 100vw;
   font-family: "Poppins", sans-serif;
+  position: relative;
 }
 
 main {
