--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -18,11 +18,19 @@ body {
   width: 100vw;
   height: 100%;
   font-family: "Poppins", sans-serif;
-  position: relative;
+  overflow-x: hidden !important;
+}
+
+.container {
+  height: 100% !important;
 }
 
 main {
   padding: 1rem;
+}
+
+nav {
+  /* position: static !important; */
 }
 
 footer {
