--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -21,3 +21,26 @@
   align-items: center;
   justify-content: center;
 }
+
+
+.announcement {
+  font-weight: bold;
+  font-size: 24px;
+  padding: 48px;
+  margin: 0 auto;
+  text-align: center;
+  /* background-color: #26b946; */
+}
+
+.announcementDark {
+  /* background-color: #20232a; */
+  color: #fff;
+  /* Reapply the primary color, because it has been locally overridden as
+   * the dark theme color */
+  /* --ifm-link-color: var(--ifm-color-primary); */
+}
+
+.announcementInner {
+  margin: 0 auto;
+  max-width: 768px;
+}
